文件管理模块重构，优化使用体验